--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,23 @@
     teal;
 }
 
+.swishy {
+  background:
+    radial-gradient(circle at 17% 41%, #0000FF, transparent 80%),
+    radial-gradient(circle at 60% 7%, #FF00FF, transparent 80%),
+    radial-gradient(circle at 75% 82%, #7F00FF, transparent 80%),
+    radial-gradient(circle at 86% 28%, #FF007F, transparent 80%),
+    radial-gradient(circle at 2% 93%, #FF007F, transparent 80%);
+}
+
+.sunray {
+  background:
+    radial-gradient(circle at 99% 2%, #353535, transparent 80%),
+    radial-gradient(circle at 4% 11%, #FAF474, transparent 80%),
+    radial-gradient(circle at 29% 77%, #FECEAB, transparent 80%),
+    radial-gradient(circle at 90% 86%, #E84A5F, transparent 80%);
+}
+
 .spotlights {
   background: radial-gradient(circle at 20% 40%, #fbc2eb 0%, transparent 50%),
     radial-gradient(circle at 80% 60%, #a6c1ee 0%, transparent 50%),
@@ -63,6 +80,28 @@
     radial-gradient(circle at 90% 90%, #78a1ff 0%, transparent 60%),
     radial-gradient(circle at 40% 80%, #78ffd6 0%, transparent 80%),
     #000428;
+}
+
+.fresh {
+  background:
+    radial-gradient(circle at 85% 18%, #D7AEFB, transparent 80%),
+    radial-gradient(circle at 23% 67%, #A7FEEB, transparent 80%),
+    radial-gradient(circle at 17% 3%, #FAF474, transparent 80%),
+    radial-gradient(circle at 81% 75%, #FFD460, transparent 80%);
+}
+
+.bubbles {
+  background:
+    radial-gradient(circle at 11% 20%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 1% 81%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 44% 21%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 48% 64%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 77% 50%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 84% 3%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 95% 96%, #FFFACD, transparent 30%),
+    radial-gradient(circle at 27% 31%, #CB4154, transparent 100%),
+    radial-gradient(circle at 84% 49%, #4B0082, transparent 100%),
+    radial-gradient(circle at 10% 50%, #40E0D0, transparent 100%);
 }
 
 .dusky {
