--- a/css/style.css
+++ b/css/style.css
@@ -138,3 +138,10 @@ body {
 .yummy {
   background-image: linear-gradient(23deg, rgb(3, 0, 30), rgb(115, 3, 192), rgb(236, 56, 188), rgb(253, 239, 249));
 }
+
+#cssOutput {
+  white-space: pre-wrap;
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  padding: 10px;
+}
