--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 
 #demo,
 .box {
-  border: 1px solid lightgray;
+  border: 1px solid #bbb;
   border-radius: 0.5em;
 }
 
@@ -16,6 +16,7 @@ body {
   height: 60vh;
   background-size: cover;
   background-repeat: no-repeat;
+  margin-top: 1em;
 }
 
 .box {
@@ -24,6 +25,11 @@ body {
   margin: 0.1em;
   width: 4em;
   height: 4em;
+}
+
+.box.active, .box:hover {
+  border: 1px solid #222;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .windfall {
@@ -144,4 +150,10 @@ body {
   background-color: #f0f0f0;
   border: 1px solid #ddd;
   padding: 10px;
+}
+
+footer {
+  margin-top: 4em;
+  font-size: 0.9em;
+  color: #666;
 }
