--- a/css/style.css
+++ b/css/style.css
@@ -27,20 +27,22 @@ body {
   height: 4em;
 }
 
-.box.active, .box:hover {
+.box.active,
+.box:hover {
   border: 1px solid #222;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
 
 .windfall {
+  background-color: #3a2d5d;
   background-image:
     radial-gradient(circle at 30% 30%, rgba(255, 0, 255, 0.6), transparent 70%),
     radial-gradient(circle at 80% 60%, rgba(0, 255, 255, 0.6), transparent 60%),
     radial-gradient(circle at 10% 80%, rgba(0, 0, 255, 0.6), transparent 50%);
-  background-color: #3a2d5d;
 }
 
 .party {
+  background-color: teal;
   background-image:
     radial-gradient(circle at top left,
       rgba(255, 255, 255, 0.5),
@@ -54,7 +56,6 @@ body {
     radial-gradient(at bottom right,
       rgba(255, 100, 100, 0.5),
       transparent 30%);
-  background-color: teal;
 }
 
 .swishy {
@@ -75,17 +76,17 @@ body {
 }
 
 .spotlights {
+  background-color: #000428;
   background-image: radial-gradient(circle at 20% 40%, #fbc2eb 0%, transparent 50%),
     radial-gradient(circle at 80% 60%, #a6c1ee 0%, transparent 50%);
-  background-color: #000428;
 }
 
 .showdown {
+  background-color: #000428;
   background-image: radial-gradient(circle at 20% 20%, #007991 0%, transparent 70%),
     radial-gradient(circle at 90% 10%, #20a967 0%, transparent 70%),
     radial-gradient(circle at 90% 90%, #78a1ff 0%, transparent 60%),
     radial-gradient(circle at 40% 80%, #78ffd6 0%, transparent 80%);
-  background-color: #000428;
 }
 
 .fresh {
@@ -110,11 +111,21 @@ body {
     radial-gradient(circle at 10% 50%, #40E0D0, transparent 100%);
 }
 
+.wow {
+  background-image:
+    radial-gradient(circle at 12% 4%, #40E0D0, transparent 60%),
+    radial-gradient(circle at 59% 62%, #D896FF, transparent 60%),
+    radial-gradient(circle at 91% 13%, #EA7E5D, transparent 60%),
+    radial-gradient(circle at 22% 95%, #4B0082, transparent 60%),
+    radial-gradient(circle at 84% 84%, #CB4154, transparent 60%),
+    radial-gradient(circle at 2% 9%, #36454F, transparent 60%);
+}
+
 .dusky {
+  background-color: #000428;
   background-image: radial-gradient(circle at 10% 30%, #004e92 0%, transparent 50%),
     radial-gradient(circle at 80% 0%, #000428 0%, transparent 50%),
     radial-gradient(circle at 60% 80%, #fbc2eb 0%, transparent 80%);
-  background-color: #000428;
 }
 
 .jupiter {
