--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,16 @@ body {
       transparent 30%);
 }
 
+.fun {
+  /* Credit: Mathieu Veber */
+  background-image:
+    radial-gradient(circle at 30% 5%, #FFDB58, transparent 50%),
+    radial-gradient(circle at 59% 78%, #FF7F50, transparent 40%),
+    radial-gradient(circle at 7% 70%, #40E0D0, transparent 70%),
+    radial-gradient(circle at 95% 4%, #D896FF, transparent 40%),
+    radial-gradient(circle at 99% 92%, #FFFACD, transparent 100%);
+}
+
 .swishy {
   background-image:
     radial-gradient(circle at 17% 41%, #0000FF, transparent 80%),
